small fix to margin
figcaption too close

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,7 @@ figcaption{
 	text-align: center;
 	justify-content: center;
 	padding-right: 30px;
+	margin-bottom: 10px;
 }
 
 html, body {
